Added settings pane. Started work on paging